syntax = "proto3";
package pb;

option go_package = "github.com/mcaci/pb";

message CardPointsRequest {
    uint32 card_number = 1;
}

message CardPointsResponse {
    uint32 points = 1;
}
